Ajustando posicionamento container inicial

--- a/GSWeb/index.html
+++ b/GSWeb/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +9,15 @@
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
+
 <body>
 
     <div class="container bg-image">
         <div class="container-el">
-        <h1>The Metaverse</h1>
-        <p class="banner-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi harum iusto vero enim minima aut nostrum perspiciatis nesciunt dolores recusandae autem, praesentium?</p>
-        <a href="" class="btn">Access Now</a>
+            <h1>The Metaverse</h1>
+            <p class="banner-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi harum iusto vero
+                enim minima aut nostrum perspiciatis nesciunt dolores recusandae autem, praesentium?</p>
+            <a href="" class="btn">Access Now</a>
         </div>
     </div>
 
@@ -25,7 +28,7 @@
                 <img src="./images/imagem1.jpg" alt="Homem utilizando tecnologia VR">
                 <figcaption>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem, debitis.</figcaption>
             </figure>
-        
+
             <figure class="gallery-item">
                 <img src="./images/imagem2.jpg" alt="Homem utilizando tecnologia VR">
                 <figcaption>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, quia.</figcaption>
@@ -52,6 +55,7 @@
             </figure>
         </div>
     </div>
-    
+
 </body>
+
 </html>
